Use docker to build packages Build deb w/ debhelper instead of electron-builder Remove ratpoison as OctoDash is the sole window. Create systemd service to launch OctoDash directly without a tty shell. Set systemd target to graphical. Incorperate xinit script into package. Create symlink for /usr/bin/octodash -> /opt/OctoDash/octodash Modify install/remove scripts to re-execute self with sudo. Deprecate using remove.sh. Removing via apt should be sufficient now. Add --version switch to octodash. Move release URL to environment variable Disable security when in dev mode (Bypass CORS checks) Remove update.sh Prevent remove.sh from running on newer installs

--- a/package.json
+++ b/package.json
@@ -40,7 +40,15 @@
     "linux": {
       "target": [
         {
-          "target": "deb",
+          "target": "dir",
+          "arch": [
+            "armv7l",
+            "arm64",
+            "x64"
+          ]
+        },
+        {
+          "target": "tar.gz",
           "arch": [
             "armv7l",
             "arm64",
@@ -64,7 +72,7 @@
     "electron:serve": "wait-on http-get://localhost:4200/ && electron . --serve",
     "electron:serve:big": "wait-on http-get://localhost:4200/ && electron . --serve --big",
     "electron:pack": "electron-builder build -l",
-    "pack": "npm run ng:build && npm run electron:pack",
+    "pack": "npm run ng:build && npm run electron:pack && ./distribution/debian.sh",
     "pack:mac": "npm run ng:build && electron-builder build -m",
     "ng:serve": "ng serve",
     "ng:build": "ng build --prod"
@@ -88,6 +96,7 @@
     "angular-svg-round-progressbar": "^6.0.0",
     "bonjour": "^3.5.0",
     "compare-versions": "^3.6.0",
+    "electron-root-path": "^1.0.16",
     "electron-store": "^7.0.2",
     "got": "^11.8.2",
     "lodash-es": "^4.17.21",
