--- a/package.json
+++ b/package.json
@@ -46,6 +46,14 @@
             "arm64",
             "x64"
           ]
+        },
+        {
+          "target": "tar.gz",
+          "arch": [
+            "armv7l",
+            "arm64",
+            "x64"
+          ]
         }
       ],
       "category": "Utility"
